--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ h1, h2, h3 {
 
 .task-manager {
   margin: 1em auto;
-  width: 80%;
+  max-width: calc(100% - 4em);
   overflow: scroll;
 }
 
@@ -36,25 +36,34 @@ h1, h2, h3 {
 }
 
 .category {
+  min-width: 12em;
   width: 12em;
 }
 
 .is-complete {
+  min-width: 4em;
   width: 4em;
 }
 
-.task {
-  width: 12em;
+.description {
+  min-width: 12em;
 }
 
 .assignee {
+  min-width: 9em;
   width: 9em;
 }
 
 .estimated-time {
+  min-width: 8em;
   width: 8em;
 }
 
 .actual-time {
+  min-width: 6em;
   width: 6em;
+}
+
+.action {
+  width: 3em;
 }
